# kk-plap-generator

./: .gitignore  Makefile  README.md  main.py  make.bat  pyproject.toml  readme.txt  run_gui.spec  run_gui.spec.onefile  run_terminal.py
assets/: Plap1234 v2.2.txt
configs/: config.toml
kk-plap-generator/: main.py  plap_generator.py  scene_utils.py
kk_plap_generator/: plap_generator.py  run_gui.py  run_terminal.py  settings.py
kk_plap_generator/configs/: config.toml  reference.toml
kk_plap_generator/generator/: __init__.py  plap_generator.py  utils.py
kk_plap_generator/gui/: __init__.py  dnd_widget.py  info_message.py  main_menu.py  output_mesage_box.py  ref_interpolable_widget.py  seq_adjustment_widget.py  sound_folders_widget.py  sound_pattern_widget.py  time_ranges_widget.py  validators.py
kk_plap_generator/tests/test_plap_generator/: test_get_keyframe_times.py
resources/: config.toml
src/: make_release.py  plap_generator.py  run_gui.py  scene_utils.py
src/configs/: config.toml  example.toml  mine.toml  reference.toml
src/kk_plap_generator/: models.py  scene_utils.py  settings.py  utils.py
src/kk_plap_generator/generator/: __init__.py  curve_ops.py  models.py  plap_generator.py  utils.py  xml_node_finder.py
src/kk_plap_generator/gui/: info_message.py  info_text.py  main_menu.py  output_mesage_box.py  ref_interpolable_widget.py  seq_adjustment_widget.py  sound_folders_widget.py  time_ranges_widget.py  utils.py  validators.py
src/kk_plap_generator/gui/widgets/: __init__.py  base.py  component_configs_widget.py  config_selector_widget.py  dnd_widget.py  ref_interpolable_widget.py  ref_switcher_widget.py  seq_adjustment_widget.py  sound_components_widget.py  sound_folders_widget.py  sound_pattern_widget.py  time_ranges_widget.py
src/kk_plap_generator/tests/test_plap_generator/: data_sets.py  test_get_keyframe_times.py
src/resources/: template.xml
