[project]
name = "kk_plap_generator"
version = "0.1.0"
description = ""
authors = [
    {name = "AX-MMD",email = "ax.mmd.yt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
package-mode = false
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
]

[tool.poetry.group.lint.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.3"
types-toml = "^0.10.8.20240310"

[tool.poetry.group.gui.dependencies]
tkinterdnd2 = "^0.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["I", "F", "E", "W"]
ignore = ["E203", "F811", "E501", "E266"]
